# go-dep-conflict

./: README.md
common/: BUILD.bazel  go.mod  lib.go
service/: BUILD.bazel  go.mod  main.go
